PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Add *pel-rpm-spec-lint*, bound to ~<f12> l~ in rpm-spec-mode buffers.  It executes the rpmlint shell command and filter
  the output with an awk script to allow the compilation-mode to parse error/warning lines properly.
- Add *pel-set-ido-use-url-at-point*, bound to ~<f11> f M-,~ .  It's value is shown by *pel-show-filemng-status* and  *pel-ido-completion-settings-string*.
- Modified key bindings for the buffer text accumulation commands. They are now all under the ~<f11> b t~ prefix
  and use an extra single letter: ~a~ for *append-to-buffer*, ~p~ for *prepend-to-buffer*, ~c~ for *copy-to-buffer*,
  ~i~ for *insert-buffer* and ~f~ for *append-to-file*.  This is easier to remember and frees key bindings for other operations.
- Add key bindings for the iflipb commands: ~<f11> b C-n~ to *iflipb-next-buffer*, ~<f11> b C-p~ to *iflipb-previous-buffer* and ~<f11> b C-k~ to *iflipb-kill-buffer.*.
  Also modified their keys into the Hydra to use the Control keys.
- *emacros-execute-named-macro* is no longer bound to ~<f11> <f4>~ to make space for a new PEL key prefix that will be used for
  dynamic behaviour change: *pel:change* key prefix.
- The first command used in the *pel:change* key prefix is *pel-toggle-overwrite-yank*, bound to ~<f11> <f4> C-y~.
  That command changes the buffer local behaviour, initially set to the value of the *pel-activate-overwrite-yank* user-option,
  which controls whether *pel-overwrite-yank* overwrites or inserts text at point when the overwrite-mode is active in the buffer.
  Being able to overwrite text when yanking is useful when writing whitespace-filled tables such as the table
  in reStructuredText markup files, for example.
- Add ~<f11> ? d M-c~ binding to *list-coding-systems*