@@ -2,7 +2,7 @@
 
 ;; Created   : Wednesday, November 20 2024.
 ;; Author    : Pierre Rouleau <prouleau001@gmail.com>
-;; Time-stamp: <2024-11-21 10:23:41 EST, updated by Pierre Rouleau>
+;; Time-stamp: <2024-11-23 10:26:31 EST, updated by Pierre Rouleau>
 
 ;; This file is part of the PEL package.
 ;; This file is not part of GNU Emacs.
@@ -39,16 +39,34 @@
 
 (defvar pel-home-dirpath-name)   ; prevent compiler warning: defined in init.el
 
-(defun pel-rpm-spec-lint (&optional comint)
+(defun pel-rpm-spec-lint ()
   "Lint the current RPM spec file, show errors in compilation-mode buffer."
   (interactive "P")
   (compile
-   ;; use the shell script that executes rpmlint and transforms its output.
+   ;; use the shell script that executes rpmlint and transforms its output
+   ;; to comply with compile-mode supported error/warning lines.
    (format "%s/bin/rpmlint-4emacs %s"
            pel-home-dirpath-name
            (shell-quote-argument (buffer-file-name)))
-   comint))
+   nil))
 
+(defun pel-rpm-build ()
+  "Build the RPM corresponding to current RPM spec file.
+
+Prompt for the command line with rpmbuild -ba as default,
+supporting history.
+Write report in a compile-mode buffer.
+"
+  (interactive)
+  (let ((cmd (read-shell-command
+              "Build RPM with: "
+              "rpmbuild -ba "
+              'pel-rpm-build-hist)))
+    (compile
+     (format "%s %s"
+             cmd
+             (shell-quote-argument (buffer-file-name)))
+     nil)))
 
 ;;; --------------------------------------------------------------------------
 (provide 'pel-rpm-spec)
